# tfl-monitor

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  SETUP.md  TM-000-spec.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: current-wp.md  napkin.md
.claude/adrs/: 001-redpanda-over-kafka.md  002-contracts-first.md  003-airflow-on-railway.md  004-logfire-langsmith-split.md  005-raw-table-defaults.md  006-aws-deploy.md  007-disruption-affected-stops-shape.md  008-remove-airflow-for-sqlalchemy2.md  009-tfl-journey-arrivals-contracts.md  010-tfl-hub-children.md  011-structured-journey-arrivals-sse-frames.md  013-pymupdf-over-docling.md  014-decommission-warehouse-live-proxy.md
.claude/skills/review-pr-comments/: SKILL.md
.claude/skills/session-handover/: SKILL.md
.claude/specs/: TM-000-plan.md  TM-000-research.md  TM-000-spec.md  TM-26-plan.md  TM-26-research.md  TM-27-plan.md  TM-30-plan.md  TM-30-research.md  TM-32-live-proxy-plan.md  TM-32-rag-pgvector-bedrock-spec.md  TM-34-live-proxy-plan.md  TM-35-plan.md  TM-A1-plan.md  TM-A1-research.md  TM-A2-plan.md  TM-A2-research.md  TM-A5-plan.md  TM-A5-research.md  TM-B1-plan.md  TM-B1-research.md  TM-B2-plan.md  TM-B2-research.md  TM-B3-plan.md  TM-B3-research.md  TM-B4-plan.md  TM-B4-research.md  TM-C1-plan.md  TM-C1-research.md  TM-C2-plan.md  TM-C2-research.md  TM-C3-plan.md  TM-C3-research.md  TM-D1-plan.md  TM-D1-research.md  TM-D2-plan.md  TM-D2-research.md  TM-D3-plan.md  TM-D3-research.md  TM-D4-plan.md  TM-D4-research.md  (+10 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy.yml  docs.yml
adrs/: index.html
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: dbt_nightly.py  rag_ingest_weekly.py
architecture/: index.html
contracts/: README.md  dbt_sources.yml  openapi.yaml
contracts/schemas/: __init__.py  arrivals.py  common.py  disruptions.py  line_status.py  tfl_api.py
contracts/sql/: 001_raw_tables.sql  002_reference_tables.sql  003_indexes.sql  004_chat.sql
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/models/: exposures.yml
dbt/models/marts/: dim_stations.sql  mart_bus_metrics_daily.sql  mart_disruptions_daily.sql  mart_tube_reliability_daily.sql  mart_tube_reliability_daily_summary.sql  schema.yml
dbt/seeds/: schema.yml  tfl_stations.csv
dbt/sources/: tfl.yml
dbt/tests/: assert_disruption_category_known.sql  assert_mart_bus_metrics_daily_grain.sql  assert_mart_disruptions_daily_grain.sql  assert_mart_tube_reliability_daily_grain.sql  assert_mart_tube_reliability_daily_summary_grain.sql  assert_pct_good_service_bounded.sql  assert_status_severity_known.sql
deployment/: index.html
docs/: adrs.md  architecture.md  deployment.md  engineering.md  glossary.md  index.md  observability.md  roadmap.md  stack.md
docs/pipelines/: agent.md  api.md  frontend.md  index.md  ingestion.md  rag.md  warehouse.md
engineering/: index.html
glossary/: index.html
infra/: .env.example  README.md  caddyfile.snippet  docker-compose.prod.yml
infra/cron.d/: tfl-monitor
infra/logrotate.d/: tfl-monitor
observability/: index.html
pipelines/: index.html
pipelines/agent/: index.html
pipelines/api/: index.html
pipelines/frontend/: index.html
pipelines/ingestion/: index.html
pipelines/rag/: index.html
pipelines/warehouse/: index.html
roadmap/: index.html
scripts/: README.md  bootstrap-tenant.sh  build_stations_seed.py  cron-dbt-run.sh  cron-retention.sh  deploy.sh  fetch_tfl_samples.py  seed_fixtures.py
search/: search_index.json
src/: README.md
src/agent/: README.md  graph.py  observability.py
src/api/: Dockerfile  README.md  db.py  debug_tfl.py  live.py  main.py  maintenance.py  observability.py  schemas.py  stations.py
src/common/: __init__.py  sampling.py
src/ingestion/: Dockerfile  README.md  kafka_config.py  observability.py  run_consumers.py  run_producers.py
src/rag/: README.md  __init__.py  config.py  embed.py  embeddings.py  fetch.py  ingest.py  parse.py  sources.json  sources.py  upsert.py  vectorstore.py
stack/: index.html
tests/: README.md  conftest.py  test_contracts.py  test_health.py
tests/agent/: conftest.py  test_extraction.py  test_graph_compile.py  test_journey_tools.py  test_live_tools.py  test_prompts.py  test_rag_tool.py  test_sql_tools.py
tests/airflow/: test_dags_parse.py
tests/api/: test_bus_punctuality.py  test_chat_history.py  test_chat_stream.py  test_cors.py  test_debug_tfl.py  test_disruptions_recent.py  test_lazy_imports.py  test_maintenance.py  test_reliability.py  test_stations.py  test_status_history.py  test_status_live.py  test_stubs.py
tests/common/: test_sampling.py
tests/fixtures/: arrivals_sample.json  disruptions_sample.json  line_status_sample.json
tests/ingestion/: conftest.py  test_arrivals_producer.py  test_disruptions_producer.py  test_event_consumer.py  test_kafka_config.py  test_kafka_consumer.py  test_kafka_producer.py  test_line_status_consumer.py  test_line_status_producer.py  test_normalise.py  test_postgres_writer.py  test_run_entrypoints.py  test_tfl_client.py  test_tfl_client_journey.py
tests/integration/: test_bus_punctuality.py  test_chat_history.py  test_chat_history_after_stream.py  test_chat_stream.py  test_disruptions_recent.py  test_pgvector_store.py  test_reliability.py  test_sql_init.py  test_status_history.py  test_status_live.py
tests/rag/: conftest.py  test_embed.py  test_embeddings.py  test_fetch.py  test_ingest.py  test_parse.py  test_sources.py  test_upsert.py
web/: .env.example  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: about-sheet.tsx  chat-view.tsx  icons.tsx  status-badge.tsx  work-in-progress.tsx
web/lib/: api-client.ts  env.ts  labels.ts  sse-parser.test.ts  sse-parser.ts  types.ts
web/scripts/: og-card.html  render-og.mjs
(+101 files in other folders)
