[project]
name = "tfl-monitor"
version = "0.0.1"
description = "Real-time data platform for TfL (Transport for London)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-ai>=1.75",
    "pydantic-settings>=2.6",
    "aiokafka>=0.12",
    "psycopg[binary,pool]>=3.2",
    "langchain-anthropic>=0.3",
    "langchain-aws>=0.2",
    "boto3>=1.35",
    "langgraph>=1.0",
    "langsmith>=0.1",
    "llama-index>=0.12",
    "llama-index-vector-stores-pinecone>=0.4",
    "pinecone>=5.0",
    "docling>=2.0",
    "anthropic>=0.39",
    "openai>=1.54",
    "logfire[fastapi,httpx,psycopg]>=3.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.7",
    "openapi-spec-validator>=0.7",
    "taskipy>=1.14",
    "apache-airflow>=2.10,<3.0",
    {include-group = "dbt"},
]
dbt = [
    "dbt-core>=1.9",
    "dbt-postgres>=1.9",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2",
    "mkdocs-glightbox>=0.4",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion", "src/api", "src/agent", "src/rag", "contracts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["docling", "docling.*", "pinecone", "pinecone.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain_anthropic",
    "langchain_anthropic.*",
    "langchain_aws",
    "langchain_aws.*",
    "langchain_core.*",
    "langgraph",
    "langgraph.*",
    "llama_index",
    "llama_index.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["airflow", "airflow.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-m 'not integration and not airflow'"
markers = [
    "integration: requires live services (Postgres, Kafka, etc.); opt in with -m integration",
    "airflow: requires apache-airflow installed; opt in with -m airflow",
    "slow: spends real LLM / RAG budget; opt in with -m 'integration and slow'",
]

[tool.taskipy.tasks]
# --exitfirst-on-collection-errors via Python wrapper: treat "no tests collected" (exit 5) as success.
# Works on both POSIX shells and Windows PowerShell.
test = "python -c \"import subprocess, sys; sys.exit(0 if subprocess.call(['pytest']) in (0, 5) else 1)\""
lint = "ruff check . && ruff format --check . && mypy src contracts"
fmt = "ruff check --fix . && ruff format ."
dbt-parse = "dbt parse --project-dir dbt --profiles-dir dbt --target ci"
dbt-build = "dbt build --project-dir dbt --profiles-dir dbt --target dev"
dbt-run = "dbt run --project-dir dbt --profiles-dir dbt --target dev"
dbt-test = "dbt test --project-dir dbt --profiles-dir dbt --target dev"
rag-ingest = "python -m rag.ingest"
api = "uvicorn api.main:app --reload --app-dir src"
init-topics = "docker compose --profile init up redpanda-init"
ingest-line-status = "python -m ingestion.producers.line_status"
consume-line-status = "python -m ingestion.consumers.line_status"
ingest-arrivals = "python -m ingestion.producers.arrivals"
consume-arrivals = "python -m ingestion.consumers.arrivals"
ingest-disruptions = "python -m ingestion.producers.disruptions"
consume-disruptions = "python -m ingestion.consumers.disruptions"
run-producers = "python -m ingestion.run_producers"
run-consumers = "python -m ingestion.run_consumers"
docs-serve = "mkdocs serve --config-file mkdocs.yml --dev-addr 127.0.0.1:8001"
docs-build = "mkdocs build --config-file mkdocs.yml --strict"
