[project]
name = "tfl-monitor"
version = "0.0.1"
description = "Real-time data platform for TfL (Transport for London)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-ai>=1.75",
    "pydantic-settings>=2.6",
    "aiokafka>=0.12",
    "psycopg[binary,pool]>=3.2",
    "langchain-anthropic>=0.3",
    "langchain-aws>=0.2",
    "boto3>=1.35",
    "langgraph>=1.0",
    "langsmith>=0.1",
    "anthropic>=0.39",
    "logfire[fastapi,httpx,psycopg]>=3.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.7",
    "openapi-spec-validator>=0.7",
    "taskipy>=1.14",
    {include-group = "dbt"},
    {include-group = "rag"},
]
dbt = [
    "dbt-core>=1.9",
    "dbt-postgres>=1.9",
]
rag = [
    "llama-index>=0.12",
    "llama-index-vector-stores-postgres>=0.4",
    "pgvector>=0.3",
    "docling>=2.0",
    # PGVectorStore's ORM delete path needs SQLAlchemy 2.0; the 0.8.x
    # metadata only declares >=1.4, so pin the real runtime floor here.
    "sqlalchemy>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2",
    "mkdocs-glightbox>=0.4",
    "mkdocs-minify-plugin>=0.8",
    "pymdown-extensions>=10.0",
]

# Force CPU-only torch wheels. docling/transformers pull torch transitively;
# without this pin, uv resolves the default CUDA-enabled wheel (~4 GB of
# nvidia-cu13 libs). Production runs CPU-only on the Lightsail box, so the
# CUDA payload is pure bloat and overflows the 58 GB disk during image unpack.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/ingestion", "src/api", "src/agent", "src/rag", "contracts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "docling",
    "docling.*",
    "llama_index.vector_stores.postgres",
    "llama_index.vector_stores.postgres.*",
    "pgvector",
    "pgvector.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
# boto3/botocore ship no py.typed marker; treat as Any (no follow) so the
# bedrock client calls in rag.embeddings don't trip disallow_untyped_calls.
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain_anthropic",
    "langchain_anthropic.*",
    "langchain_aws",
    "langchain_aws.*",
    "langchain_core.*",
    "langgraph",
    "langgraph.*",
    "llama_index",
    "llama_index.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: requires live services (Postgres, Kafka, etc.); opt in with -m integration",
    "slow: spends real LLM / RAG budget; opt in with -m 'integration and slow'",
]

[tool.taskipy.tasks]
# --exitfirst-on-collection-errors via Python wrapper: treat "no tests collected" (exit 5) as success.
# Works on both POSIX shells and Windows PowerShell.
test = "python -c \"import subprocess, sys; sys.exit(0 if subprocess.call(['pytest']) in (0, 5) else 1)\""
lint = "ruff check . && ruff format --check . && mypy src contracts"
fmt = "ruff check --fix . && ruff format ."
dbt-parse = "dbt parse --project-dir dbt --profiles-dir dbt --target ci"
dbt-build = "dbt build --project-dir dbt --profiles-dir dbt --target dev"
dbt-run = "dbt run --project-dir dbt --profiles-dir dbt --target dev"
dbt-test = "dbt test --project-dir dbt --profiles-dir dbt --target dev"
rag-ingest = "python -m rag.ingest"
api = "uvicorn api.main:app --reload --app-dir src"
# Loads .env so TFL_APP_KEY (and TFL_DEBUG_PROXY=1 when set) reach the
# process, letting the Swagger UI proxy real TfL calls without manual
# key entry. Local dev only — do not use in production.
api-debug = "uvicorn api.main:app --reload --app-dir src --env-file .env"
init-topics = "docker compose --profile init up redpanda-init"
ingest-line-status = "python -m ingestion.producers.line_status"
consume-line-status = "python -m ingestion.consumers.line_status"
ingest-arrivals = "python -m ingestion.producers.arrivals"
consume-arrivals = "python -m ingestion.consumers.arrivals"
ingest-disruptions = "python -m ingestion.producers.disruptions"
consume-disruptions = "python -m ingestion.consumers.disruptions"
run-producers = "python -m ingestion.run_producers"
run-consumers = "python -m ingestion.run_consumers"
docs-serve = "mkdocs serve --config-file mkdocs.yml --dev-addr 127.0.0.1:8001"
docs-build = "mkdocs build --config-file mkdocs.yml --strict"
